tests/expectations/parser-expression/expression/binary/neq_fail.out
Error [EPAR0370005]: expected <eof> -- found '!='
    --> test_0:1:8
     |
   1 | 1 != 2 != 3
     |        ^^
